--- a/package.json
+++ b/package.json
@@ -19,17 +19,29 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "bootstrap": "^4.5.0",
+    "core-js-pure": "^3.6.5",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^10.0.5",
+    "igniteui-cli": "^6.0.0",
+    "jszip": "^3.3.0",
+    "minireset.css": "~0.0.4",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^12.11.1",
+    "@igniteui/angular-schematics": "~10.0.600",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jszip": "^3.1.7",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
